enhancement(#313): tests adjusted